...
    @IBOutlet var usageTitle: UILabel!
    @IBOutlet var usage: UILabel!
    @IBOutlet var usageUnit: UILabel!
    @IBOutlet var balance: UILabel!
    @IBOutlet var dataBalance: UILabel!
    @IBOutlet var networkName: UILabel!
    @IBOutlet var devices: UILabel!

    var networkDisclosure: UITableViewCell!
    var devicesDisclosure: UITableViewCell!

    @IBOutlet var accountsButton: UIButton!
    var settingsBadge: UILabel!
...
        settingsBadge.layer.cornerRadius = settingsBadge.bounds.size.height / 2
        settingsBadge.layer.masksToBounds = true
        settingsBadge.backgroundColor = .clear

        let rightButton = UIButton(type: .system)
        rightButton.frame = CGRect(x: 0, y: 0, width: 24, height: 24)
        rightButton.setBackgroundImage(UIImage(named: "settings")?.withRenderingMode(.alwaysTemplate), for: .normal)
        rightButton.addTarget(self, action: #selector(settingsPressed), for: .touchUpInside)
        rightButton.addSubview(settingsBadge)

        navigationItem.rightBarButtonItem = UIBarButtonItem(customView: rightButton)
    }

...
